Bug 1773120 - Accept AV1 level 31 in codec parameter strings. r=alwu a=pascalc

Fixes an issue where AV1 test videos on twitch.tv would be unable to play.

Differential Revision: https://phabricator.services.mozilla.com/D148844